cmake_minimum_required(VERSION 3.16.5)
project(OcleaLog)

include(GNUInstallDirs)

set(OCLEA_LOG_TARGET_NAME "${PROJECT_NAME}")
set(OCLEA_LOG_INCLUDE_INSTALL_DIR "${CMAKE_INSTALL_INCLUDEDIR}/oclea/log/")

add_library(${OCLEA_LOG_TARGET_NAME} INTERFACE)
target_include_directories(
    ${OCLEA_LOG_TARGET_NAME}
    INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
        $<INSTALL_INTERFACE:include/>
)

install(
    TARGETS ${OCLEA_LOG_TARGET_NAME}
    EXPORT ${OCLEA_LOG_TARGET_NAME}_Targets
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

install(
    DIRECTORY ${PROJECT_SOURCE_DIR}/include/
    DESTINATION ${OCLEA_LOG_INCLUDE_INSTALL_DIR}
)
